Styling and finishing up

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <!-- build:css(.tmp) styles/page.css -->
+    <link rel="stylesheet" href="styles/page.css">
+    <!-- endbuild -->
   </head>
   <body ng-app="blackjackApp">
     <!--[if lt IE 7]>
@@ -54,16 +57,16 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/directives/player-information.js"></script>
-        <script src="scripts/services/card-shoe.js"></script>
-        <script src="scripts/services/dealer.js"></script>
-        <script src="scripts/services/game.js"></script>
-        <script src="scripts/models/card.js"></script>
-        <script src="scripts/models/deck.js"></script>
-        <script src="scripts/controllers/table.js"></script>
-        <script src="scripts/controllers/status-bar.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/directives/player-information.js"></script>
+    <script src="scripts/services/card-shoe.js"></script>
+    <script src="scripts/services/dealer.js"></script>
+    <script src="scripts/services/game.js"></script>
+    <script src="scripts/models/card.js"></script>
+    <script src="scripts/models/deck.js"></script>
+    <script src="scripts/controllers/table.js"></script>
+    <script src="scripts/controllers/status-bar.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
